...
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/ivUserAvatar"
        app:layout_constraintTop_toTopOf="@+id/ivUserAvatar"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivUserAvatar"
        app:layout_constraintStart_toStartOf="@+id/ivUserAvatar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
...
